--- a/nginx-server/public/form.html
+++ b/nginx-server/public/form.html
@@ -6,7 +6,7 @@
 <body>
   <form action="http://localhost/auth" method="post">
     <input name="code" type="text" value="te086ur"/>  
-    <button>Send</button>
+    <button>Send!</button>
   </form>
 </body>
 </html>
