--- a/public/form.html
+++ b/public/form.html
@@ -5,7 +5,7 @@
 </head>
 <body>
   <form action="http://localhost/auth" method="post">
-    <input name="code" type="text" value="te086ur"/>  
+    <input name="code" type="text" value="SOME_TOKEN"/>
     <button>Send!</button>
   </form>
 </body>
